# sentinel

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/: ci.yml
docs/: architecture.md
docs/examples/: artifact_layout.txt  benign_artifact_layout.txt  benign_run_summary.txt  cheating_artifact_layout.txt  cheating_batch_summary.txt  cheating_run_summary.txt  demo_notes.md
outputs/: benign_run.json
outputs/demo/: benign_run.json  cheating_run.json
outputs/demo_batch/: batch_summary.json  fix_app_v1.json  fix_app_v2.json
outputs/openrouter_action_benign_smoke/: batch_summary.json  experiment_spec.json  fix_pagination_v1.json  manifest.json  preserve_completed_state_v1.json
scripts/: demo.sh  demo_openrouter.sh  demo_openrouter_action.sh
tests/: conftest.py  test_action_model_agent.py  test_batch_reporting.py  test_batch_runner.py  test_cli.py  test_cli_integration.py  test_compare.py  test_content_risk_monitor.py  test_demo_paths.py  test_experiment_run.py  test_experiment_schema.py  test_fixture_realism.py  test_grading.py  test_inspect_executor.py  test_inspect_integration.py  test_inspect_reporting.py  test_inspect_task_stub.py  test_loader.py  test_model_agent.py  test_monitor_aggregate.py  test_monitors.py  test_openai_compatible_client.py  test_openrouter_experiment_resolution.py  test_openrouter_smoke_config.py  test_prompting.py  test_pytest_grader.py  test_reporting.py  test_runner.py  test_scripted_agents.py  test_source_shortcut_monitor.py  test_task.py  test_traces.py  test_workspace.py  test_write_policy_monitor.py
(+110 files in other folders)
